<?xml version="1.0"?>
<package format="3">
  <name>rplidar_ros</name>
  <version>1.9.0</version>
  <description>The rplidar ros package, support rplidar A2/A1 and A3</description>

  <maintainer email="ros@slamtec.com">Slamtec ROS Maintainer</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
